--- a/canary_map.html
+++ b/canary_map.html
@@ -53,7 +53,7 @@
   }
 
   // Load the GeoJSON data
-  fetch("canary_data.geojson")
+  fetch("canarias.geojson")
     .then(response => response.json())
     .then(data => {
      console.log(data);  // Logs the loaded GeoJSON data
