--- a/canary_map.html
+++ b/canary_map.html
@@ -53,7 +53,7 @@
   }
 
   // Load the GeoJSON data
-  fetch("canarias.geojson")
+  fetch("https://drive.google.com/file/d/1_PFanHiOn_0vAakZ1VjdyHs7Umuvc7wG/view?usp=sharing")
     .then(response => response.json())
     .then(data => {
      console.log(data);  // Logs the loaded GeoJSON data
