--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   }
 
   // Load the GeoJSON data
-  fetch("https://drive.google.com/file/d/12PpniHUZJV4HHRMLPcM7IZ92puL858mY/view?usp=sharing")
+  fetch("https://drive.google.com/file/d/12PpniHUZJV4HHRMLPcM7IZ92puL858mY/view?usp=share_link")
     .then(response => response.json())
     .then(data => {
       L.geoJson(data, {
