--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   }
 
   // Load the GeoJSON data
-  fetch("https://www.dropbox.com/scl/fi/csq3s87yd0ow3ym4aepws/spanish_unemp.geojson?rlkey=jx03vu99zf5enr8ubmfbvze5u&dl=1")
+  fetch("https://cors-anywhere.herokuapp.com/https://www.dropbox.com/scl/fi/csq3s87yd0ow3ym4aepws/spanish_unemp.geojson?rlkey=jx03vu99zf5enr8ubmfbvze5u&dl=1")
     .then(response => response.json())
     .then(data => {
       L.geoJson(data, {
